Test/errors/err_string_owned_local_into_field.cb
// Assigning an OWNED string LOCAL directly into a string field aliases the local's heap
// buffer; both the field's teardown destructor and the local's scope-exit destructor would
// free it (double-free). Rejected with a steer to 'move' / '.copy()'. (See the via-local
// field-to-field companion test err_string_field_alias_via_local.cb.)
import "string.cb";

struct Row { string name = default; };

void store(Row a)
{
    string tmp = "fresh " + "owned";   // an owned string local
    expect_error("aliases a heap buffer it does not solely own");
    a.name = tmp;                      // plain store aliases tmp's buffer -> double-free
}

extern int main()
{
    return 0;
}
